--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
     <h3>Login-page | Project-1.2</h3>
     <p>A modern look login page using only html and css(didn't use backend).</p>
     <a href="Login-pageLL.zip" target="_blank" class="btn-view">⏬ Download zip file</a>
+    <a href="https://github.com/saiprabhatca/Login-pageLL-Project-1.2" target="_blank" class="btn-view">🌟 View on GitHub</a>
   </div>
 </section>
 
