Updated a link index.html

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     <section class="section" id="contact" data-aos="fade-up">
       <h2>Contact</h2>
       <p>Email: <a href="mailto:saiprabhat.ca@gmail.com">saiprabhat.ca@gmail.com</a></p>
-      <p>LinkedIn: <a href="https://www.linkedin.com/in/sai-prabhat-ca-9a873a322/" target="_blank">linkedin.com/in/sai-prabhat-ca</a></p>
+      <p>LinkedIn: <a href="https://www.linkedin.com/in/saiprabhatca/" target="_blank">linkedin.com/in/sai-prabhat-ca</a></p>
       <p><a href="#" class="btn-view disabled">📄 Download Resume (Coming Soon)</a></p>
     </section>
   </main>
