Updated about index.html

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <main class="container">
     <section class="section" id="about" data-aos="fade-up">
       <h2>About Me</h2>
-      <p>I'm a B.Tech student in Electronics and Communication Engineering studying in Jain University with a passion for innovation, exploring the tech world. With interests spanning web development, IoT, and embedded systems.</p>
+      <p>I’m Sai, an <b>Electronics and Communication Engineering</b> student currently studying at <b>Jain University</b>,passionate about embedded systems, PCB design, and IoT innovation.Beginning focused preparation for <b>GATE</b> and <b>IELTS</b> as part of my academic roadmap. And to pursue <b>MS in Embedded Systems in Germany</b>. My long-term goal? To return with global experience and launch my own tech venture.<br><br><b>“Engineer. Maker. Future founder.”</b></p>
     </section>
 
     <section class="section" id="achievements" data-aos="fade-up">
