--- a/index.html
+++ b/index.html
@@ -92,6 +92,12 @@
     <a href="Login-pageLL.zip" target="_blank" class="btn-view">⏬ Download zip file</a>
     <a href="https://github.com/saiprabhatca/Login-pageLL-Project-1.2" target="_blank" class="btn-view">🌟 View on GitHub</a>
   </div>
+      <div class="project-item">
+    <h3>The Shopping Site | Project-2</h3>
+    <p>A Creative shopping site using only html and css(didn't use backend).</p>
+    <a href="The shopping site-P2.zip" target="_blank" class="btn-view">⏬ Download zip file</a>
+    <a href="https://github.com/saiprabhatca/Project-2-The-shopping-site" target="_blank" class="btn-view">🌟 View on GitHub</a>
+  </div>
 </section>
 
 
